Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8021567/T8021567.out
T8021567.java:21:9: compiler.err.ref.ambiguous: m, kindname.method, m(T8021567.I_byte), T8021567, kindname.method, m(T8021567.I_char), T8021567
1 error
